--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: 'custom-font'; /*a name to be used later*/
+    src: url('../fonts/custom.ttf'); /*URL to font*/
+}
+
+body{
+    font-family: "custom-font", serif;
+}
 #hud{
-    background-color: rgba(0,0,0,0.41);
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -9,6 +16,30 @@
 #topbar{
     margin:10px;
     padding: 10px;
-    background-color:white;
     width: auto;
+    font-size:3em;
+}
+#menu{
+    width: 40%;
+    border-radius: 10px;
+    background-color: rgba(255, 240,119, 0.85);
+    border: 5px solid black;
+    position: relative;
+    margin:auto;
+    padding: 100px;
+    text-align: center;
+}
+#menu h1{
+    font-size: 4em;
+}
+button{
+    font-family: "custom-font", serif;
+    text-align: center;
+    background-color: white;
+    border: 1px solid black;
+    padding: 10px 30px;
+    font-size: 2.5em;
+}
+button:hover{
+    background-color: #ddd;
 }
