--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -66,7 +66,16 @@ canvas {
     float: left;
     transform: rotateY(36deg);
     text-align: left;
+}
 
+#hud-ammo {
+    position: absolute;
+    width: 25%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 #hud-right {
